# artplace

./: README.md
backend/: Cargo.toml  build.rs  flake.nix
backend/src/: lib.rs  main.rs  messages.proto  server.rs  session.rs
frontend/: package-lock.json  package.json
frontend/public/: messages.proto
frontend/src/: App.vue  style.css
frontend/src/components/: FreeDrawing.vue
